--- a/package.json
+++ b/package.json
@@ -21,17 +21,26 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "bcryptjs": "^2.4.3",
     "geist": "^1.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.408.0",
     "next": "^14.2.4",
+    "randomatic": "^3.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "resend": "^3.4.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "tsx": "^4.16.2",
     "zod": "^3.23.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/eslint": "^8.56.10",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.10",
+    "@types/randomatic": "^3.1.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
