--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@trpc/server": "^11.0.0-rc.446",
     "bcryptjs": "^2.4.3",
     "geist": "^1.3.0",
+    "jose": "^5.6.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.408.0",
     "next": "^14.2.4",
