dependency: Uninstall jose dependency

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "geist": "^1.3.0",
-    "jose": "^5.6.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.408.0",
     "next": "^14.2.4",
